apps/plant-app/overlays/dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-app
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nginx
