apps/plant-app/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plant-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: plant-app.dev.local
    http:
      paths:
      - path: /
        backend:
          service:
            name: plant-app-service
            port:
              number: 80
